manifests/argocd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: apifoundation
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: alm
