manifests/argocd/base/ingress.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   annotations:
#     service.beta.kubernetes.io/azure-load-balancer-internal: "true"
#   labels:
#     app.kubernetes.io/component: server
#     app.kubernetes.io/name: argocd-server
#     app.kubernetes.io/part-of: argocd
#   name: argocd-server-lb
#   namespace: argocd
# spec:
#   type: LoadBalancer
#   loadBalancerIP: TO_OVERLAY
#   ports:
#     - name: http
#       port: 80
#       protocol: TCP
#       targetPort: 8080
#     - name: https
#       port: 443
#       protocol: TCP
#       targetPort: 8080
#   selector:
#     app.kubernetes.io/name: argocd-server
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-server-ingress
 annotations:
   ingress.kubernetes.io/force-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
 ingressClassName: nginx
 rules:
 - host: argocd.azure.bnl-ms.myengie.com
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: argocd-server
           port:
             name: https
 tls:
 - hosts:
   - argocd.azure.bnl-ms.myengie.com
   secretName: argocd-server-tls
